# media-platform-java-sdk

./: .gitignore  .travis.yml  BUILD.bazel  CONTRIBUTING.md  LICENSE  MANIFEST.MF  README.md  WORKSPACE  pom.xml  third_party.bzl
demo/main/java/com/wix/mediaplatform/: Demo.java  Main.java
src/main/java/com/wix/mediaplatform/: MediaPlatform.java  MediaType.java
src/main/java/com/wix/mediaplatform/authentication/: AuthenticatedHttpClient.java  AuthenticationFacade.java  Authenticator.java  NS.java  Token.java  VERB.java
src/main/java/com/wix/mediaplatform/collection/: CollectionManager.java
src/main/java/com/wix/mediaplatform/configuration/: Configuration.java
src/main/java/com/wix/mediaplatform/dto/: BaseDTO.java  FileBaseDTO.java  FileDTO.java  FileDescriptor.java  MediaType.java  ResponseWrapper.java
src/main/java/com/wix/mediaplatform/exception/: ErrorCode.java  ExceptionFactory.java  FileAlreadyExistsException.java  FileNotExistsException.java  FileNotFoundException.java  FileSizeException.java  InvalidConfigurationException.java  MediaPlatformException.java  MediaPlatformRuntimeException.java  ResourceNotFoundException.java  UnauthorizedException.java
src/main/java/com/wix/mediaplatform/filedownloader/: FileDownloader.java
src/main/java/com/wix/mediaplatform/fileuploader/: FileUploader.java
src/main/java/com/wix/mediaplatform/geometry/: Rectangle.java
src/main/java/com/wix/mediaplatform/gson/: FileAclJsonDeserializer.java  FileAclJsonSerializer.java  FileMetadataJsonDeserializaer.java  FileMetadataJsonDeserializer.java  FileTypeJsonDeserializer.java  FileTypeJsonSerializer.java  JobTypeJsonDeserializer.java  LifecycleActionJsonDeserializer.java  LifecycleActionJsonSerializer.java  RuntimeTypeAdapterFactory.java  Types.java
src/main/java/com/wix/mediaplatform/http/: AuthenticatedHTTPClient.java  Constants.java  ExponentialBackOffRetryStrategy.java  HTTPClient.java  RetryErrorsStrategy.java
src/main/java/com/wix/mediaplatform/image/: Image.java  ImageRequest.java  Metadata.java  Option.java  OriginalData.java  Parser.java  StringToken.java  Validation.java
src/main/java/com/wix/mediaplatform/jwt/: Constants.java
src/main/java/com/wix/mediaplatform/management/: ArchiveManager.java  FileDownloader.java  FileManager.java  FileUploader.java  JobManager.java  LiveManager.java  TranscodeManager.java
src/main/java/com/wix/mediaplatform/v6/: MediaPlatform.java
src/main/java/com/wix/mediaplatform/v7/: MediaPlatform.java
src/main/java/com/wix/mediaplatform/v8/: MediaPlatform.java
src/test/java/com/wix/mediaplatform/: BaseTest.java  MediaPlatformTest.java
src/test/java/com/wix/mediaplatform/authentication/: AuthenticationFacadeTest.java  (+1 more)
src/test/java/com/wix/mediaplatform/v8/: BUILD.bazel  BaseTest.java  MediaPlatformTest.java
src/test/java/com/wix/mediaplatform/v8/auth/: AuthenticatorTest.java  BUILD.bazel
src/test/java/com/wix/mediaplatform/v8/image/: BUILD.bazel  ImageTest.java  ImageTokenTest.java
src/test/java/com/wix/mediaplatform/v8/image/encoder/: BUILD.bazel  JPEGTest.java
src/test/java/com/wix/mediaplatform/v8/image/filter/: BUILD.bazel  BlurTest.java  BrightnessTest.java  ContrastTest.java  HueTest.java  SaturationTest.java  UnsharpMaskTest.java
src/test/java/com/wix/mediaplatform/v8/service/archive/: ArchiveServiceTest.java  BUILD.bazel
src/test/java/com/wix/mediaplatform/v8/service/file/: BUILD.bazel  FileServiceTest.java
src/test/java/com/wix/mediaplatform/v8/service/flowcontrol/: BUILD.bazel  FlowControlServiceTest.java
src/test/java/com/wix/mediaplatform/v8/service/image/: BUILD.bazel  ImageServiceTest.java
src/test/java/com/wix/mediaplatform/v8/service/job/: BUILD.bazel  JobServiceTest.java
src/test/java/com/wix/mediaplatform/v8/service/live/: BUILD.bazel  LiveServiceTest.java
src/test/java/com/wix/mediaplatform/v8/service/transcode/: BUILD.bazel  TranscodeServiceTest.java
src/test/resources/__files/: copy-file-response.json  create-archive-pending-response.json  create-file-response.json  create-live-stream-response.json  document-upload-response.json  extract-archive-with-report-pending-response.json  extract-archive-with-report-success-response.json  extract-archive-without-report-success-response.json  file-upload-already-exists-response.json  file-upload-response.json  file-upload-unrecognized-error-response.json  file-upload-with-callback-response.json  file-upload-with-lifecycle-response.json  folder-dto-response.json  get-collection-response.json  get-file-not-found-response.json  get-file-secure-image-response.json  get-flow-state-response.json  get-job-group-response.json  get-job-response.json  get-secure-download-url-not-found-error.json  get-upload-configuration-v3-response.json  get-upload-url-response.json  image-features-response.json  image-import-7752-error-response.json  image-operation-response.json  import-file-pending-response.json  import-file-success-response.json  list-collections-response.json  list-files-response.json  list-live-streams-response.json  new-collection-response.json  publish-collection-response.json  search-jobs-response.json  secure-image-upload-response.json  transcode-response.json  watermark-response.json
usage/main/java/com/wix/demousage/: DemoOperations.java  Main.java
(+790 files in other folders)
