package(default_visibility = ["//visibility:public"])
java_junit5_test(
    
     
    name = "image",
    srcs = [
        "//src/test/java/com/wix/mediaplatform/v8/image:sources"
    ],
    deps = [
        "//:tests_dependencies" , 
        "//:media-platform-java-sdk" , 
    ],
    runtime_deps = [
        
    ],
    
    test_package = "com.wix.mediaplatform.v8.image",
     
)

sources()
