package(default_visibility = ["//visibility:public"])
java_junit5_test(
    
     
    name = "transcode",
    srcs = [
        "//src/test/java/com/wix/mediaplatform/v8/service/transcode:sources"
    ],
    deps = [
        "//:tests_dependencies" , 
        "//:media-platform-java-sdk" , 
        "//src/test/java/com/wix/mediaplatform/v8:v8"
    ],
    runtime_deps = [
        
    ],
    
    test_package = "com.wix.mediaplatform.v8.service.transcode",
     
)

sources()
